--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the core module for Greenstand web map application.",
   "main": "index.js",
   "scripts": {
+    "dev": "serve .",
     "cy": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,5 +29,10 @@
   "bugs": {
     "url": "https://github.com/dadiorchen/treetracker-web-map-core/issues"
   },
-  "homepage": "https://github.com/dadiorchen/treetracker-web-map-core#readme"
+  "homepage": "https://github.com/dadiorchen/treetracker-web-map-core#readme",
+  "devDependencies": {
+    "serve": "^12.0.1",
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
