--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the core module for Greenstand web map application.",
   "main": "index.js",
   "scripts": {
-    "dev": "serve ./dist",
+    "dev": "webpack serve",
     "cy": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,6 +34,7 @@
   "devDependencies": {
     "serve": "^12.0.1",
     "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
