--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "url": "git+https://github.com/dadiorchen/treetracker-web-map-core.git"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cypress": "^8.7.0",
+    "expect-runtime": "^0.10.1",
     "leaflet": "^1.7.1",
     "leaflet-utfgrid": "git+https://github.com/dadiorchen/Leaflet.UTFGrid.git",
     "leaflet.gridlayer.googlemutant": "^0.12.1",
