--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "homepage": "https://github.com/dadiorchen/treetracker-web-map-core#readme",
   "devDependencies": {
+    "css-loader": "^6.5.0",
     "serve": "^12.0.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
