--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/dadiorchen/treetracker-web-map-core#readme",
   "devDependencies": {
     "css-loader": "^6.5.0",
+    "cypress-watch-and-reload": "^1.5.4",
     "serve": "^12.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
