--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cypress": "^8.7.0",
+    "events": "^3.3.0",
     "expect-runtime": "^0.10.1",
     "leaflet": "^1.7.1",
     "leaflet-utfgrid": "git+https://github.com/dadiorchen/Leaflet.UTFGrid.git",
