--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "webpack serve",
     "cy": "cypress open",
     "pre-publish": "webpack --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "css-loader": "^6.5.0",
     "cypress-watch-and-reload": "^1.5.4",
+    "jest": "^27.3.1",
     "serve": "^12.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
