--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cypress-watch-and-reload": "^1.5.4",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "prettier": "2.5.1",
     "serve": "^12.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
