--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^27.3.1",
     "prettier": "2.5.1",
     "serve": "^12.0.1",
+    "sort-package-json": "^1.53.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
