--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@commitlint/config-conventional": "^15.0.0",
     "css-loader": "^6.5.0",
     "cypress-watch-and-reload": "^1.5.4",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "prettier": "2.5.1",
