--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "scripts": {
     "cy": "cypress open",
     "dev": "webpack serve",
+    "format": "prettier ./ --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "pre-publish": "webpack --mode=production",
     "prepare": "husky install",
     "test": "jest"
