--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
         run: npm ci
         working-directory: ${{ env.project-directory }}
 
+      - name: ESLint
+        run: npm run lint
+        working-directory: ${{ env.project-directory }}
+
       - run: npm i -g semantic-release @semantic-release/{git,exec,changelog}
 
       - run: semantic-release
