--- a/.github/workflows/npm-module-release.yml
+++ b/.github/workflows/npm-module-release.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Publish
         run: |
           npm config set //registry.npmjs.org/:_authToken ${NPM_AUTH_TOKEN}
-          npm publish --ignore-scripts
+          npm publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
