--- a/.github/workflows/npm-module-release.yml
+++ b/.github/workflows/npm-module-release.yml
@@ -31,7 +31,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Publish
         run: |
-          npm config set //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
+          npm config set '//registry.npmjs.org/:_authToken' "${{secrets.NPM_AUTH_TOKEN}}"
           npm install -D husky
           npx husky install
           npm publish --ignore-scripts
