--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "loglevel": "^1.7.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "cypress-watch-and-reload": "^1.5.4",
     "eslint": "^8.4.1",
