--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "leaflet-utfgrid": "git+https://github.com/dadiorchen/Leaflet.UTFGrid.git",
     "leaflet.gridlayer.googlemutant": "^0.12.1",
     "lodash": "^4.17.21",
-    "loglevel": "^1.7.1"
+    "loglevel": "^1.7.1",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
