--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "cy": "cypress open",
-    "dev": "webpack serve",
+    "dev": "webpack serve --mode=development",
     "format": "prettier ./ --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -41,14 +41,20 @@
     "leaflet.gridlayer.googlemutant": "^0.12.1",
     "lodash": "^4.17.21",
     "loglevel": "^1.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "babel-loader": "^8.2.3",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "css-loader": "^6.5.0",
     "cypress-watch-and-reload": "^1.5.4",
     "eslint": "^8.4.1",
@@ -63,6 +69,9 @@
     "serve": "^12.0.1",
     "sort-package-json": "^1.53.1",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
