--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@types/google.maps": "^3.50.5",
     "@types/jest": "^29.2.2",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
