--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/google.maps": "^3.50.5",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "^29.2.3",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
@@ -65,15 +65,16 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
     "husky": "^7.0.4",
-    "jest": "^27.3.1",
+    "jest": "^29.3.1",
     "lint-staged": "^12.1.2",
     "prettier": "2.5.1",
     "serve": "^12.0.1",
     "sort-package-json": "^1.53.1",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.3",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
