--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,3 +43,7 @@ jobs:
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
+
+      - name: npm test
+        run: npm test
+        working-directory: ${{ env.project-directory }}
