--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-env": "^7.16.8",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@types/jest": "^29.2.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "cypress-watch-and-reload": "^1.5.4",
