--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "jsx": "react-jsx"
   },
   "include": ["src", "cypress"],
-  "exlcude": ["node_modules"]
+  "exlcude": ["node_modules", "./**/*.cy.tsx?"]
 }
