--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -44,6 +44,22 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
 
+      - name: Get current version number
+        run: echo ::set-env name=VERSION::$(node -p "require('./package.json').version")
+
+      - name: Bump version number
+        run: |
+          npm version ${VERSION}
+          echo ::set-env name=NEW_VERSION::$(node -p "require('./package.json').version")
+
+      - name: Commit changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -am "Bump version to ${NEW_VERSION}"
+          git tag ${NEW_VERSION}
+          git push origin main --tags
+
   unit-tests:
     name: Run unit tests
     runs-on: ubuntu-latest
