--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -45,8 +45,7 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@master
 
       - name: Get current version number
-        id: get_version
-        run: echo ::set-output name=version::$(node -p "require('./package.json').version")
+        run: echo "VERSION=$(node -p 'require(\"./package.json\").version')" >> $GITHUB_ENV
 
       - name: Bump version number
         run: npm version ${{ env.VERSION }}
