fix: test update version

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "format": "prettier ./ --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "pre-publish": "webpack --mode=production",
+    "pre-publish": "npm version patch && webpack --mode=production",
     "prepare": "husky install",
     "test": "jest"
   },
